objects/Target_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <picklist>
            <controllingField>Business_Line__c</controllingField>
            <picklistValues>
                <fullName>MOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VBR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBULI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mod. and Rep.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <inlineHelpText>Workflow will default this to the first of the month</inlineHelpText>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team</label>
        <referenceTo>Sales_Team__c</referenceTo>
        <relationshipLabel>Target Assignments</relationshipLabel>
        <relationshipName>Target_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>Sales_Team_Assignment__c</referenceTo>
        <relationshipLabel>Target Assignments</relationshipLabel>
        <relationshipName>Target_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Metric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Metric</label>
        <referenceTo>Target_Metric__c</referenceTo>
        <relationshipLabel>Target Assignments</relationshipLabel>
        <relationshipName>Target_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>YEAR(Month__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Target Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Amount__c</columns>
        <columns>Salesperson__c</columns>
        <columns>Sales_Team__c</columns>
        <columns>Target__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Target Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Sales_Person_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Salesperson__c)</errorConditionFormula>
        <errorDisplayField>Salesperson__c</errorDisplayField>
        <errorMessage>Cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Team_cannot_be_empty_or_changed</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Sales_Team__c) || ISCHANGED(Sales_Team__c)</errorConditionFormula>
        <errorDisplayField>Sales_Team__c</errorDisplayField>
        <errorMessage>Cannot be empty or changed</errorMessage>
    </validationRules>
</CustomObject>